# braine

./: .env.example  .gitignore  AirflowDockerfile  Dockerfile  airflow.cfg  docker-compose-prod.yml  docker-compose.yml  makefile  pyproject.toml
config/: settings.py  urls.py
core/: docker-compose-prod.yml  urls.py  views.py
core/static/css/: home.css
core/static/js/: fapesp.js
core/templates/: index.html
scripts/: start-local.sh
